compiler/testData/diagnostics/tests/resolve/resolveTypeArgsForUnresolvedCall.fir.kt
fun foo() {
    <!UNRESOLVED_REFERENCE!>x<!>.yyy<<!UNRESOLVED_REFERENCE!>XXX<!>>()
    <!UNRESOLVED_REFERENCE!>x<!>.yyy<Int>()
}
